--- a/public/partials/add-edit-connections.html
+++ b/public/partials/add-edit-connections.html
@@ -6,7 +6,7 @@
         <h4 class="modal-title">{{ modalHeading }}</h4>
       </div>
       <div class="modal-body" >
-        <div class="well" ng-if="modalHeading !='Make Payment'">
+        <div class="well" ng-if="modalHeading !='View Payment'">
         <form class="form-horizontal" name="connectionForm" novalidate>
           <div id="help" class="row" ng-show="connectionForm.$invalid">
             <div class="help-block" ng-messages="connectionForm.deacitvationreason.$error" ng-if="connectionForm.deacitvationreason.$touched">
@@ -101,38 +101,24 @@
           </div>
         </form>
       </div>
-      <div class="row" ng-if="modalHeading =='Make Payment'">
+      <div class="row" ng-if="modalHeading =='View Payment'">
         <table class="table table-striped table-hover ">
           <thead>
             <tr>
               <th>Payment Type</th>
               <th>Paid Amount</th>
-              <th>Paid for month</th>
+              <th>Paid for</th>
               <th>Agent Name</th>
-              <th></th>
+              <th>Paid On</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td><select class="form-control"  id="paymenttypes" ng-model="payment.type"><option ng-repeat="type in paymenttypes" value="{{type.lookupvalue}}">{{type.lookupvalue}}</option></select></td>
-              <td><input type="number" ng-model="payment.paidamt" value="" placeholder="100"/></td>
-              <td>
-                <p class="input-group">
-                  <input type="text" class="form-control" datepicker-popup="{{monthFormat}}" ng-model="payment.paidformonth" is-open="pfmStatus.opened" datepicker-options="dateOptions" date-ng-required="true" close-text="Close" datepicker-mode="'month'"min-mode=" 'month'" max-mode="'month'" show-weeks='false'/>
-                  <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="openCal($event, 'pfmstatus')"><i class="glyphicon glyphicon-calendar"></i></button>
-                  </span>
-                </p>
-              </td>
-              <td><select class="form-control"  id="paidto" ng-model="payment.paidto"><option ng-repeat="agent in agents" value="{{agent.agentname}}">{{agent.agentname}}</option></select></td>
-              <td><button name="save" class="btn btn-success btn-sm" ng-click="savePayment()">Save Payment</button></td>
-            </tr>
             <tr ng-repeat="payment in payments">
               <td>{{payment.paymenttype}}</td>
               <td>{{payment.paidamt}}</td>
-              <td>{{payment.paidformonth | date: 'MMM yyyy'}}</td>
+              <td>{{payment.paidmonth}} {{payment.paidyear}}</td>
               <td>{{payment.paidto}}</td>
-              <td></td>
+              <td>{{payment.paiddate | date: 'dd MMM yyyy'}}</td>
             </tr>
           </tbody>
         </table>
