--- a/public/partials/customers.html
+++ b/public/partials/customers.html
@@ -2,5 +2,6 @@
 <div class="row">
 	<a href="#/customer/add-edit/0" class="btn btn-success pull-right">Add New Customer</a>
 </div>
-<div class="row"><div ui-grid="gridOptions" ></div></div>
+<paymodal visible="showModal"></paymodal>
+<div class="row"><div ui-grid="gridOptions" ui-grid-expandable></div></div>
 </div>
