--- a/public/partials/add-edit-agent.html
+++ b/public/partials/add-edit-agent.html
@@ -1,21 +1,57 @@
 <div class="well">
-<form class="form-horizontal">
+<form class="form-horizontal" name="agentForm" novalidate>
   <fieldset>
     <legend>{{header}}</legend>
-        <div class="form-group">
-        <label for="agentname" class="col-md-1 control-label"> Name</label>
-        <div class="col-md-2"><input class=" form-control " id="agentname" placeholder="Kannagi" type="text" ng-model="agent.agentname"></div>
-
-        <label for="fathersname" class="col-md-2  control-label"> Father's Name</label>
-        <div class="col-md-2"><input class=" form-control " id="fathersname" placeholder="Murugan" type="text" ng-model="agent.fathersname"></div>
-        <label for="dateofbirth" class="col-md-2 control-label"> Date Of Birth</label>
-        <div class="col-md-2">
-          <p class="input-group">
-            <input id="dateofbirth" type="text" class="form-control" datepicker-popup="{{dateFormat}}" ng-model="agent.dateofbirth" is-open="dobStatus.opened" datepicker-options="dateOptions" date-ng-required="true" close-text="Close" />
-            <span class="input-group-btn">
-              <button type="button" class="btn btn-default" ng-click="openCal($event, 'dobstatus')"><i class="glyphicon glyphicon-calendar"></i></button>
-            </span>
-          </p>
+      <div id="help" class="row" ng-show="agentForm.$invalid">
+        <div class="help-block" ng-messages="agentForm.agentname.$error" ng-if="agentForm.agentname.$touched">
+              <p class="text-danger" ng-message="required">Agent Name is required.</p>
+          </div>
+         
+          <div class="help-block" ng-messages="agentForm.street1.$error" ng-if="agentForm.street2.$touched">
+              <p class="text-danger" ng-message="required">Door No is required.</p>
+          </div>
+          <div class="help-block" ng-messages="agentForm.street2.$error" ng-if="agentForm.street2.$touched">
+            <p class="text-danger" ng-message="required">Street is required.</p>
+          </div>
+          <div class="help-block" ng-messages="agentForm.area.$error" ng-if="agentForm.area.$touched">
+            <p class="text-danger" ng-message="required">Area is required.</p>
+          </div>
+          <div class="help-block" ng-messages="agentForm.landlineno.$error" ng-if="agentForm.landlineno.$touched">
+              <p class="text-danger" ng-message="pattern">Land Line no should have 11 digits with std code and number</p>
+          </div>
+           <div class="help-block" ng-messages="agentForm.mobileno.$error" ng-if="agentForm.mobileno.$touched">
+              <p class="text-danger" ng-message="pattern">Mobile no should have 10 digits</p>
+              <p class="text-danger" ng-message="required">Mobile no is required</p>
+          </div>
+          <div class="help-block" ng-messages="agentForm.areallocated.$error" ng-if="agentForm.areallocated.$touched">
+            <p class="text-danger" ng-message="required">Area Allocated is required.</p>
+          </div>
+          <div class="help-block" ng-messages="agentForm.startdate.$error" ng-if="agentForm.startdate.$touched">
+            <p class="text-danger" ng-message="required">Startdate is required.</p>
+          </div>
+          <div class="help-block" ng-messages="agentForm.salary.$error" ng-if="agentForm.area.$touched">
+            <p class="text-danger" ng-message="required">Salary is required.</p>
+          </div>
+      </div>
+      <div class="form-group">
+        <div ng-class="{ 'has-error': agentForm.agentname.$touched && agentForm.agentname.$invalid }">
+          <label for="agentname" class="col-md-1 control-label"> Name</label>
+          <div class="col-md-2"><input class=" form-control " id="agentname" placeholder="Kannagi" type="text" ng-model="agent.agentname" required></div>
+        </div>
+        <div>
+          <label for="fathersname" class="col-md-2  control-label"> Father's Name</label>
+          <div class="col-md-2"><input class=" form-control " id="fathersname" placeholder="Murugan" type="text" ng-model="agent.fathersname"></div>
+        </div>
+        <div>
+          <label for="dateofbirth" class="col-md-2 control-label"> Date Of Birth</label>
+          <div class="col-md-2">
+            <p class="input-group">
+              <input id="dateofbirth" type="text" class="form-control" datepicker-popup="{{dateFormat}}" ng-model="agent.dateofbirth" is-open="dobStatus.opened" datepicker-options="dateOptions" date-ng-required="true" close-text="Close" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="openCal($event, 'dobstatus')"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </p>
+          </div>
         </div>
       </div>
 
@@ -40,53 +76,65 @@
         
       </div>
       <div class="form-group ">
+        <div ng-class="{ 'has-error': agentForm.street1.$touched && agentForm.street1.$invalid }">
           <label for="street1" class="col-md-1 control-label">Door No</label>
-          <div class="col-md-2"><input class=" form-control " id="street1" placeholder="No4" type="text" ng-model="agent.address.street1"></div>
-
+          <div class="col-md-2"><input class=" form-control " id="street1" placeholder="No4" type="text" ng-model="agent.address.street1" required></div>
+        </div>
+          
+        <div ng-class="{ 'has-error': agentForm.street2.$touched && agentForm.street2.$invalid }">
           <label for="street2" class="col-md-1  control-label">Street</label>
-          <div class="col-md-2"><input class=" form-control " id="street2" placeholder="Wireless Station Road" type="text" ng-model="agent.address.street2"></div>
-
+          <div class="col-md-2"><input class=" form-control " id="street2" placeholder="Wireless Station Road" type="text" ng-model="agent.address.street2" required></div>
+        </div>
+        <div ng-class="{ 'has-error': agentForm.area.$touched && agentForm.area.$invalid }">
           <label for="area" class="col-md-1 control-label">Area</label>
-          <div class="col-md-2"><select class="form-control" id="area" ng-model="agent.address.area">
+          <div class="col-md-2"><select class="form-control" id="area" ng-model="agent.address.area" required>
             <option ng-repeat="area in areas" value="{{area.lookupvalue}}">{{area.lookupvalue}}</option>
           </select>
           </div>
-
-          <label for="pincode" class="col-md-1  control-label">Pincode</label>
-          <div class="col-md-1"><input class=" form-control " id="pincode" placeholder="689344" type="text" ng-model="agent.address.pincode"></div>
-          
         </div>
+      </div>
         
-        <div class="form-group ">
+      <div class="form-group ">
+        <div ng-class="{ 'has-error': agentForm.landlineno.$touched && agentForm.landlineno.$invalid }">
           <label for="landlineno" class="col-md-1 control-label">LandLine No</label>
           <div class="col-md-2"><input class=" form-control " id="landlineno" placeholder="0431-" type="text" ng-model="agent.contacts.landlineno">
           </div>
+        </div>  
           
+        <div ng-class="{ 'has-error': agentForm.mobileno.$touched && agentForm.mobileno.$invalid }">  
           <label for="mobileno" class="col-md-1  control-label">Mobile No</label>
-          <div class="col-md-2"><input class=" form-control " id="mobileno" placeholder="9882323248" type="text" ng-model="agent.contacts.mobileno"></div>
+          <div class="col-md-2"><input class=" form-control " id="mobileno" placeholder="9882323248" type="text" ng-model="agent.contacts.mobileno" required></div>
+        </div>  
 
-          <label for="email" class="col-md-1 control-label">Email</label>
-          <div class="col-md-2"><input class="form-control" type="text" id="email" placeholder="vijay.cables@gmail.com" ng-model="agent.contacts.email"></div>
-        </div>
-        <div class="form-group">
+      </div>
+      <div class="form-group">
+        <div ng-class="{ 'has-error': agentForm.areallocated.$touched && agentForm.areallocated.$invalid }">  
           <label for="areallocated" class="col-md-1 control-label">Area Allocated</label>
-          <div class="col-md-2"><select class="form-control" id="areallocated" ng-model="agent.areallocated">
+          <div class="col-md-2"><select class="form-control" id="areallocated" ng-model="agent.areallocated" required>
             <option ng-repeat="area in areas" value="{{area.lookupvalue}}">{{area.lookupvalue}}</option>
           </select>
           </div>
+        </div>
+        
+        <div ng-class="{ 'has-error': agentForm.startdate.$touched && agentForm.startdate.$invalid }">    
           <label for="startdate" class="col-md-1 control-label">Start Date</label>
           <div class="col-md-2">
             <p class="input-group">
-              <input id="startdate" type="text" class="form-control" datepicker-popup="{{dateFormat}}" ng-model="agent.startdate" is-open="startStatus.opened" datepicker-options="dateOptions" date-ng-required="true" close-text="Close" />
+              <input id="startdate" type="text" class="form-control" datepicker-popup="{{dateFormat}}" ng-model="agent.startdate" is-open="startStatus.opened" datepicker-options="dateOptions" date-ng-required="true" close-text="Close" required/>
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="openCal($event, 'startstatus')"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
             </p>
           </div>
-          <label for="salary" class="col-md-1  control-label">Salary</label>
-          <div class="col-md-2"><input class=" form-control " id="salary" placeholder="3000" type="text" ng-model="agent.salary"></div>
-          <div class="col-md-2 pull-right"><button class="btn btn-success" ng-click="saveAgent()">Save Agent Details</button></div>
         </div>
+        
+        <div ng-class="{ 'has-error': agentForm.salary.$touched && agentForm.salary.$invalid }">    
+          <label for="salary" class="col-md-1  control-label">Salary</label>
+          <div class="col-md-2"><input class=" form-control " id="salary" placeholder="3000" type="text" ng-model="agent.salary" required></div>
+        </div>  
+        
+        <div class="col-md-2 pull-right"><button class="btn btn-success" data-ng-disabled="agentForm.$invalid" ng-click="saveAgent()">Save Agent Details</button></div>
+      </div>
   </fieldset>
 </form>
 </div>
